# atr-parser-cpp

./: .clang-format  CMakeLists.txt  LICENSE  README.md
include/: atr.hpp
src/: atr.cpp  receive.cpp  utility.hpp
test/: helper.hpp  test_atr.cpp  test_receive.cpp
